# databricks-dashboard-app

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.yaml  bitbucket-pipelines.yml  pyproject.toml
.claude-plugin/: marketplace.json
app/: main.py
bundles/dashboard-metrics/: databricks.yml  targets.yml  variables.yml
bundles/dashboard-metrics/resources/: dashboard_app.yml
bundles/dashboard-metrics/src/app/: app.py  app.yaml  charts.py  queries.py  requirements.txt
bundles/dashboard-metrics/src/app/.streamlit/: config.toml
databricks/: databricks.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  ESTADO_ATUAL.md  LESSONS_LEARNED.md  STUDY_PLAN.md
plugins/ui-design/.claude-plugin/: plugin.json
plugins/ui-design/skills/frontend-design/: SKILL.md
plugins/ui-design/skills/frontend-design/brand/: indicium_ai.md
plugins/ui-design/skills/frontend-design/references/: workshop-deck.html
scripts/: cleanup_stale_schemas.sql  deploy_preview.sh  preview_cleanup.sh  teardown_preview.sh
tests/: conftest.py  test_charts.py  test_queries.py
